[index][tactical forgeting] add TactF to index page

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 erosionEnabled: true
 ---
+li.new
+  a href="/$lang$/projects/tactical-forgetting.html"
+    | Tactical Forgetting
 li.new.text
   a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
     | All you need now is in pinned messages
