--- a/ru/index.slim
+++ b/ru/index.slim
@@ -4,6 +4,9 @@ aboutLabel: "O EEEFFF"
 template: "templates/index.html"
 erosionEnabled: true
 ---
+li.new
+  a href="/$lang$/projects/tactical-forgetting.html"
+    | Тактическое забывание
 li.new.text
   a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
     | All you need now is in pinned messages (en)
