--- a/css/app.scss
+++ b/css/app.scss
@@ -249,6 +249,11 @@
 
 @import "tactical-forgetting";
 
+@import "algorithmic-solidarity";
+
+@import "sensory-room-with-42-cooling-fans";
+
+
 /* @import "slick"; */
 /* @import "slick-theme"; */
 
@@ -428,7 +433,7 @@
   }
 }
 
-html, body {
+html {
   height: 100%;
   min-height: 100%;
 }
