--- a/templates/default.html
+++ b/templates/default.html
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" class="$canonicalName$">
   <head>
     $partial("templates/header.html")$
   </head>
-  <body>
+  <body class="$canonicalName$">
     <input type="hidden" id="lang" name="lang" data-lang="$lang$"/>
     <input type="hidden" id="revision" name="revision" data-revision="$revision$"/>
 
