--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,3 +1,79 @@
+
+@mixin home-button-color($color, $hovercolor) {
+  svg #back-to-home {
+    fill: $color;
+
+    &:hover {
+      fill: $hovercolor;
+    }
+  }
+}
+
+//
+//
+// LANG SWITCH button
+//
+//
+.lang-switch {
+  transform: translate(2.5vw) rotate(90deg);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  font-size: 10vw;
+  line-height: 1;
+  padding-left: 6vw;
+  color: blue;
+  text-decoration: underline;
+  text-transform: uppercase;
+  z-index: 9999;
+  // opacity: 0.7;
+
+  @include breakpoint(medium) {
+    font-size: 5vw;
+  }
+
+  &:hover {
+    color: lightgray;
+  }
+}
+
+//
+//
+// HOME BUTTON
+//
+//
+.back-to-home {
+  display: block;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 50px;
+  height: auto;
+
+  z-index: 9999999;
+
+  margin-top: 1rem;
+  margin-left: 1rem;
+
+  @include breakpoint(medium) {
+    width: 70px;
+  }
+
+  @include breakpoint(large) {
+    width: 100px;
+  }
+
+  @include home-button-color(darkblue, lightgray);
+
+}
+
+
+
 #main-app {
   position: fixed;
   top: 0;
