--- a/css/app.scss
+++ b/css/app.scss
@@ -162,21 +162,17 @@
 //
 //
 
-@mixin home-button-color($color, $hovercolor) {
-  svg #back-to-home {
-    fill: $color;
-
-    &:hover {
-      fill: $hovercolor;
-    }
-  }
-}
-
 //
 //
 // END OF MIXINS
 //
 //
+
+//
+// site wide includes
+//
+
+@import "fonts";
 
 //
 //
@@ -295,115 +291,6 @@
 /* //   "foundation/components/offcanvas", */
 /* //   "foundation/components/visibility"; */
 
-@font-face {
-  font-family: "pt-serifitalic";
-  font-style: normal;
-  font-weight: normal;
-  src: url("../fonts/PTSerifItalic.ttf");
-}
-
-@font-face {
-  font-family: "AsimovXWid";
-  src: url("../fonts/AsimovXWid.otf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "Asimov";
-  src: url("../fonts/Asimov.otf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "AsimovIt";
-  src: url("../fonts/AsimovIt.otf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "AsimovOu";
-  src: url("../fonts/AsimovOu.otf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "AsimovNarOuIt";
-  src: url("../fonts/AsimovNarOuIt.otf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "InputMonoMedium";
-  src: url("../fonts/InputMono-Medium.ttf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "InputMonoBlack";
-  src: url("../fonts/InputMono-Black.ttf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "InputMonoBlackItalic";
-  src: url("../fonts/InputMono-BlackItalic.ttf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "PhosphateInline";
-  src: url("../fonts/Phosphate-Inline.eot");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-
-
-
-@font-face {
-  font-family: "OpenSansRegular";
-  src: url("../fonts/OpenSans-Regular.ttf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
-@font-face {
-  font-family: "PTSansWebRegular";
-  src: url("../fonts/PT_Sans-Web-Regular.ttf");
-  /* src: local("☺"), */
-  /*   url("type/filename.woff") format("woff"), */
-  /*   url("type/filename.otf") format("opentype"), */
-  /*   url("type/filename.svg#filename") format("svg"); */
-}
-
 
 /*
  *
@@ -444,64 +331,6 @@ body {
 
   position: relative;
 }
-
-.lang-switch {
-  transform: translate(2.5vw) rotate(90deg);
-  display: block;
-
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  font-size: 10vw;
-  line-height: 1;
-  padding-left: 6vw;
-  color: blue;
-  text-decoration: underline;
-  z-index: 9999;
-  // opacity: 0.7;
-
-  @include breakpoint(medium) {
-    font-size: 5vw;
-  }
-
-  &:hover {
-    color: lightgray;
-  }
-}
-
-//
-//
-// HOME BUTTON
-//
-//
-.back-to-home {
-  display: block;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  width: 50px;
-  height: auto;
-
-  z-index: 9999999;
-
-  margin-top: 1rem;
-  margin-left: 1rem;
-
-  @include breakpoint(medium) {
-    width: 70px;
-  }
-
-  @include breakpoint(large) {
-    width: 100px;
-  }
-
-  @include home-button-color(darkblue, lightgray);
-
-}
-
 
 
 section {
