--- a/css/_mobile_agitator.scss
+++ b/css/_mobile_agitator.scss
@@ -2,7 +2,7 @@
    background-image: url("/images/mobile-agitator/bg.png");
    background-size: cover;
    background-position: 50% 50%;
-   min-height: 100%;
+   min-height: 100vh;
    color: white;
 
   .header h1 {
