[scss] fix font urls

--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -3,12 +3,12 @@
   font-family: "pt-serifitalic";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/PTSerifItalic.ttf");
+  src: url("/fonts/PTSerifItalic.ttf");
 }
 
 @font-face {
   font-family: "AsimovXWid";
-  src: url("../fonts/AsimovXWid.otf");
+  src: url("/fonts/AsimovXWid.otf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: "Asimov";
-  src: url("../fonts/Asimov.otf");
+  src: url("/fonts/Asimov.otf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: "AsimovIt";
-  src: url("../fonts/AsimovIt.otf");
+  src: url("/fonts/AsimovIt.otf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -35,7 +35,7 @@
 
 @font-face {
   font-family: "AsimovOu";
-  src: url("../fonts/AsimovOu.otf");
+  src: url("/fonts/AsimovOu.otf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -44,7 +44,7 @@
 
 @font-face {
   font-family: "AsimovNarOuIt";
-  src: url("../fonts/AsimovNarOuIt.otf");
+  src: url("/fonts/AsimovNarOuIt.otf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -53,7 +53,7 @@
 
 @font-face {
   font-family: "InputMonoMedium";
-  src: url("../fonts/InputMono-Medium.ttf");
+  src: url("/fonts/InputMono-Medium.ttf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -62,7 +62,7 @@
 
 @font-face {
   font-family: "InputMonoBlack";
-  src: url("../fonts/InputMono-Black.ttf");
+  src: url("/fonts/InputMono-Black.ttf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -71,7 +71,7 @@
 
 @font-face {
   font-family: "InputMonoBlackItalic";
-  src: url("../fonts/InputMono-BlackItalic.ttf");
+  src: url("/fonts/InputMono-BlackItalic.ttf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -80,7 +80,7 @@
 
 @font-face {
   font-family: "PhosphateInline";
-  src: url("../fonts/Phosphate-Inline.eot");
+  src: url("/fonts/Phosphate-Inline.eot");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -92,7 +92,7 @@
 
 @font-face {
   font-family: "OpenSansRegular";
-  src: url("../fonts/OpenSans-Regular.ttf");
+  src: url("/fonts/OpenSans-Regular.ttf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
@@ -101,7 +101,7 @@
 
 @font-face {
   font-family: "PTSansWebRegular";
-  src: url("../fonts/PT_Sans-Web-Regular.ttf");
+  src: url("/fonts/PT_Sans-Web-Regular.ttf");
   /* src: local("☺"), */
   /*   url("type/filename.woff") format("woff"), */
   /*   url("type/filename.otf") format("opentype"), */
