--- a/css/pages/for-ru4real.scss
+++ b/css/pages/for-ru4real.scss
@@ -2,7 +2,15 @@
 
 
 body {
-  background: red;
+   //background: red;
+   // background: rgb(239,0,255);
+   // background: radial-gradient(circle, rgba(239,0,255,1) 0%, rgba(0,0,0,1) 25%, rgba(255,255,255,1) 50%, rgba(0,245,255,1) 72%, rgba(0,255,55,1) 100%);
+
+  // milder
+  background: rgb(219,122,226);
+  background: radial-gradient(circle, rgba(219,122,226,1) 0%, rgba(169,163,205,1) 25%, rgba(255,255,255,1) 50%, rgba(143,251,255,1) 72%, rgba(154,255,176,1) 100%);
+
+  font-size: 18px;
 }
 
 article {
@@ -11,6 +19,21 @@ article {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+
+  color: darkblue;
+
+  padding-bottom: 2rem;
+}
+
+a {
+  color: cyan;
+  text-decoration: underline;
+  text-decoration-thickness: 0.2em;
+}
+
+h2 {
+  position: sticky;
+  top: 0.5rem;
 }
 
 iframe {
@@ -23,4 +46,19 @@ iframe {
     height: auto;
     aspect-ratio: 16 / 9;
   }
+
+  &.orangery-bot {
+    background-color: aqua;
+  }
+}
+
+.code-inline {
+  background: none;
+  border: none;
+  text-shadow: 0 0 0.5em blue;
+}
+
+pre.sourceCode {
+  border-left: 0.5em solid blue;
+  padding-left: 0.5em;
 }
