[OP] using standard method for OP injection

--- a/templates/default.html
+++ b/templates/default.html
@@ -61,10 +61,10 @@
      </script>
      <!-- <script type="text/javascript" src="https://dev.eeefff.org/js/erosion-machine-timeline-v2.js?$revision$"></script> -->
 
-     <script type="text/javascript" src="/js/op-erosion-machine-runtime-main.js?$revision$"></script>
-     <script type="text/javascript" src="/js/op-erosion-machine-vendors-main.js?$revision$"></script>
-     <script type="text/javascript" src="/js/op-erosion-machine-prelude.js?$revision$"></script>
-     <script type="text/javascript" src="/js/op-erosion-machine-main-chunk.js?$revision$"></script>
+     <!-- <script type="text/javascript" src="/js/op-erosion-machine-runtime-main.js?$revision$"></script> -->
+     <!-- <script type="text/javascript" src="/js/op-erosion-machine-vendors-main.js?$revision$"></script> -->
+     <!-- <script type="text/javascript" src="/js/op-erosion-machine-prelude.js?$revision$"></script> -->
+     <!-- <script type="text/javascript" src="/js/op-erosion-machine-main-chunk.js?$revision$"></script> -->
 
   </body>
 </html>
