--- a/templates/header.html
+++ b/templates/header.html
@@ -38,3 +38,6 @@ $endif$
 <script type="text/javascript" src="/js/vendor/d3-queue.js"></script>
 <script type="text/javascript" src="/js/app.js?$revision$"></script>
 <!-- <script type="text/javascript" src="/js/compiled/out/main.js?$revision$"></script> -->
+
+<!-- <link data-react-helmet="true" rel="stylesheet" href="https://eeefff.org/css/erosion-machine-timeline-v2.css"/> -->
+<script type="text/javascript" src="/js/erosion-machine-timeline-v2.js?$revision$"></script>
