--- a/css/app.scss
+++ b/css/app.scss
@@ -241,6 +241,8 @@
 
 @import "economic-orangery";
 
+@import "economic-orangery-2021";
+
 @import "outsourcing-paradise";
 
 @import "tactical-forgetting";
