[projects] new pages

--- a/ru/index.slim
+++ b/ru/index.slim
@@ -5,18 +5,24 @@ template: "templates/index.html"
 erosionEnabled: true
 ---
 li.new
+  a href="/en/projects/algorithmic-solidarity.html"
+    | School of algorithmic Solidarity (en)
+li.new
+  a href="/en/projects/economic-orangery-2021.html"
+    | Экономическая Оранжерея 2021 (EN)
+li.new
+  a href="/en/projects/sensory-room-with-42-cooling-fans.html"
+    | sensory room with 42 cooling fans (en)
+li.new
   a href="/$lang$/projects/tactical-forgetting.html"
     | Тактическое забывание
-li.new.text
+li.text
   a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
     | All you need now is in pinned messages (en)
-li.new
-  a href="/$lang$/projects/economic-orangery-2021.html"
-    | Экономическая Оранжерея 2021
-li.new
+li
   a href="/$lang$/projects/outsourcing-paradise.html"
     | Аутсорсинговый рай (паразит)
-li.new
+li
   a href="/$lang$/projects/scooters-training-session.html"
     | Сессия-тренировка "Кто быстрее устанет, вы или алгоритмы?"
 li
