--- a/en/index.slim
+++ b/en/index.slim
@@ -5,18 +5,24 @@ template: "templates/index.html"
 erosionEnabled: true
 ---
 li.new
-  a href="/$lang$/projects/tactical-forgetting.html"
-    | Tactical Forgetting
-li.new.text
-  a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
-    | All you need now is in pinned messages
+  a href="/$lang$/projects/algorithmic-solidarity.html"
+    | School of algorithmic Solidarity
 li.new
   a href="/$lang$/projects/economic-orangery-2021.html"
     | Economic Orangery 2021
 li.new
+  a href="/$lang$/projects/sensory-room-with-42-cooling-fans.html"
+    | sensory room with 42 cooling fans
+li.new
+  a href="/$lang$/projects/tactical-forgetting.html"
+    | Tactical Forgetting
+li.text
+  a href="https://www.ecology-attention.mmpraxis.com/contributions/eeefff/" target="_blank"
+    | All you need now is in pinned messages
+li
   a href="/$lang$/projects/outsourcing-paradise.html"
     | Outsourcing paradise (parasite)
-li.new
+li
   a href="/$lang$/projects/scooters-training-session.html"
     | Training session "Who will get tired faster, you or the algorithms?"
 li
