[layout] add slim templates

--- a/templates/sensory-room-with-42-cooling-fans.slim
+++ b/templates/sensory-room-with-42-cooling-fans.slim
@@ -1,7 +1,2 @@
-section.sensory-room-with-42-cooling-fans
-  .video-container
-    video loop="true" autoplay="true" muted="true"
-      source src="$videoUrl$" type="video/mp4"
-  button.enable-sound
-    | 🔊
+article.sensory-room-with-42-cooling-fans
   | $body$
