[index] add thumbs test data attr

--- a/en/index.slim
+++ b/en/index.slim
@@ -4,7 +4,7 @@ aboutLabel: "ABOUT EEEFFF"
 template: "templates/index.html"
 erosionEnabled: true
 ---
-li.new
+li.new data-thumb="/pictures/projects/algorithmic-solidarity/eeefff-catify-01.jpg"
   a href="/$lang$/projects/algorithmic-solidarity.html"
     | School of algorithmic Solidarity
 li.new
